modal overflow fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -314,7 +314,6 @@ a.seemre {
   max-width: 100vh !important;
   max-height: 80%;
   position: absolute !important;
-  overflow: auto;
 }
 .mat-dialog-container {
   padding: 0 !important;
